[gd_scene load_steps=30 format=3 uid="uid://c335c0ra4sxvn"]

[ext_resource type="Script" path="res://scripts/world/world.gd" id="1_avwxw"]
[ext_resource type="PackedScene" uid="uid://dn3d7w1pu2ogt" path="res://scenes/Player.tscn" id="1_pifyd"]
[ext_resource type="Texture2D" uid="uid://c50pbo8x527ee" path="res://assets/texture_01.png" id="2_0hexq"]
[ext_resource type="VoxelBlockyLibrary" uid="uid://cpwomnannffhn" path="res://assets/block_library.tres" id="3_bbiwd"]
[ext_resource type="Script" path="res://scripts/ui/BlockList.gd" id="4_33dil"]
[ext_resource type="Texture2D" uid="uid://bfsm180r1aeml" path="res://assets/icons/0.png" id="5_gc771"]
[ext_resource type="ArrayMesh" path="res://assets/block_mesh.tres" id="6_v34gl"]
[ext_resource type="Script" path="res://scripts/ui/StructureTree.gd" id="7_5dil5"]
[ext_resource type="Script" path="res://scripts/ui/OptionBar.gd" id="7_27mee"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_es4sy"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_wmjbf"]
sky_material = SubResource("ProceduralSkyMaterial_es4sy")

[sub_resource type="Environment" id="Environment_7815o"]
background_mode = 2
sky = SubResource("Sky_wmjbf")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0mjo4"]
albedo_texture = ExtResource("2_0hexq")
uv1_scale = Vector3(4096, 4096, 4096)

[sub_resource type="PlaneMesh" id="PlaneMesh_2585f"]
material = SubResource("StandardMaterial3D_0mjo4")
size = Vector2(4096, 4096)

[sub_resource type="BoxShape3D" id="BoxShape3D_t5ce8"]
size = Vector3(4096, 0.01, 4096)

[sub_resource type="VoxelGeneratorFlat" id="VoxelGeneratorFlat_7yl32"]
channel = 0
height = 1.0

[sub_resource type="VoxelMesherBlocky" id="VoxelMesherBlocky_jg3kq"]
library = ExtResource("3_bbiwd")

[sub_resource type="Shader" id="Shader_0jcwp"]
resource_local_to_scene = true
code = "shader_type spatial;

uniform vec3 scale = vec3(1.0);
uniform float width: hint_range(0.0, 10.0) = 0.05;
uniform float sharpness: hint_range(0.0, 1.0) = 1;
uniform float glow: hint_range(1.0, 16.0) = 1.0;
uniform vec4 color: source_color = vec4(1.0);
uniform sampler2D tex: source_color;

varying vec3 vert;
varying vec3 normal;

void vertex(){
	VERTEX += sign(VERTEX) * (scale - 1.0) * 0.5;
	
	vert = VERTEX;
	normal = abs(NORMAL);
}

void fragment(){
	vec3 fv = fract(vec3(vert.x, vert.y * -1.0, vert.z));
	vec3 vs = abs(vert) - scale * 0.5;
	float ws = width * sharpness;
	
	ALPHA = 1.0 - (float(width < length(vs.xy)) 
		* float(width < length(vs.yz)) 
		* float(width < length(vs.xz)));
	ALBEDO = ( texture(tex, fv.zy).rgb * normal.x + texture(tex, fv.xz).rgb * normal.y + texture(tex, fv.xy).rgb * normal.z ) 
		* float(width < length(vs.xy)) 
		* float(width < length(vs.yz)) 
		* float(width < length(vs.xz)
		);
	EMISSION = (1.0 - smoothstep(ws, width, length(vs.xy)) * smoothstep(ws, width, length(vs.yz)) * smoothstep(ws, width, length(vs.xz))) * color.rgb * glow;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h6mrx"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_0jcwp")
shader_parameter/scale = Vector3(1, 1, 1)
shader_parameter/width = 0.05
shader_parameter/sharpness = 1.0
shader_parameter/glow = 1.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_b2v3f"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_h6mrx")
size = Vector3(1.01, 1.01, 1.01)
subdivide_width = 16
subdivide_height = 16
subdivide_depth = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f515j"]
bg_color = Color(0.25098, 0.25098, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u8oni"]
bg_color = Color(0.12549, 0.501961, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63evq"]
bg_color = Color(0.12549, 0.501961, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymh38"]
bg_color = Color(0.12549, 0.501961, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6nxsn"]
bg_color = Color(0.12549, 0.501961, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1cs8"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqcod"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1cs0"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlab7"]
bg_color = Color(0, 0, 0, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_avwxw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7815o")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("PlaneMesh_2585f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_t5ce8")

[node name="Player" parent="." instance=ExtResource("1_pifyd")]
unique_name_in_owner = true

[node name="VoxelTerrain" type="VoxelTerrain" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.5, -0.5)
generator = SubResource("VoxelGeneratorFlat_7yl32")
mesher = SubResource("VoxelMesherBlocky_jg3kq")

[node name="Structures" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="BlockList" type="ItemList" parent="." groups=["PauseUI"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = 40.0
offset_bottom = -72.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 1
same_column_width = true
fixed_column_width = 200
icon_mode = 0
fixed_icon_size = Vector2i(64, 64)
script = ExtResource("4_33dil")

[node name="SelectedBlock" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -288.0
offset_top = 48.0
offset_right = -208.0
offset_bottom = 128.0
grow_horizontal = 0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Hotbar" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -676.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0

[node name="Hotbar1" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar1"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[1]"

[node name="Hotbar2" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[2]"

[node name="Hotbar3" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar3"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[3]"

[node name="Hotbar4" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar4"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[4]"

[node name="Hotbar5" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar5"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[5]"

[node name="Hotbar6" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar6"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar6"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[6]"

[node name="Hotbar7" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar7"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar7"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[7]"

[node name="Hotbar8" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar8"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar8"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[8]"

[node name="Hotbar9" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar9"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar9"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[9]"

[node name="Hotbar0" type="ColorRect" parent="Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hotbar/Hotbar0"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_gc771")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Hotbar/Hotbar0"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "[0]"

[node name="OutlineMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
cast_shadow = 0
mesh = SubResource("BoxMesh_b2v3f")

[node name="BlockPreviewMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = ExtResource("6_v34gl")

[node name="Panel" type="Panel" parent="." groups=["PauseUI"]]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="OptionBar" type="HBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_right = 39.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("7_27mee")

[node name="Structures" type="Button" parent="Panel/OptionBar"]
layout_mode = 2
text = "Structures"

[node name="Save" type="Button" parent="Panel/OptionBar"]
layout_mode = 2
text = "Save Structure"

[node name="Load" type="Button" parent="Panel/OptionBar"]
layout_mode = 2
disabled = true
text = "Load Structure"

[node name="Place" type="Button" parent="Panel/OptionBar"]
visible = false
layout_mode = 2
text = "Place Structure"

[node name="Clear" type="Button" parent="Panel/OptionBar"]
layout_mode = 2
text = "Clear"

[node name="Refresh" type="Button" parent="Panel/OptionBar"]
layout_mode = 2
text = "Refresh"

[node name="AutoAdd" type="CheckButton" parent="Panel/OptionBar"]
visible = false
layout_mode = 2
text = "Auto Add/Remove"

[node name="ShowSubstitutions" type="CheckButton" parent="Panel/OptionBar"]
layout_mode = 2
text = "Show Substitutions"

[node name="IgnoreRotation" type="CheckButton" parent="Panel/OptionBar"]
layout_mode = 2
text = "Ignore Rotation"

[node name="Structs" type="Panel" parent="." groups=["PauseUI"]]
unique_name_in_owner = true
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 40.0
offset_right = 408.0
grow_vertical = 2

[node name="StructureTree" type="Tree" parent="Structs"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.976
anchor_bottom = 0.671
offset_left = 8.0
offset_top = 8.0
offset_right = 0.0639648
offset_bottom = 0.0319824
script = ExtResource("7_5dil5")

[node name="Options" type="VBoxContainer" parent="Structs"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.024
anchor_top = 0.684
anchor_right = 0.976
anchor_bottom = 0.987
offset_left = -0.0640001
offset_top = 0.127991
offset_right = 0.0639648
offset_bottom = -0.0960083

[node name="NewStruct" type="HBoxContainer" parent="Structs/Options"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StructName" type="LineEdit" parent="Structs/Options/NewStruct"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
placeholder_text = "New structure..."

[node name="AddStruct" type="Button" parent="Structs/Options/NewStruct"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "+"

[node name="SetOrigin" type="Button" parent="Structs/Options"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_f515j")
theme_override_styles/hover = SubResource("StyleBoxFlat_f515j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f515j")
theme_override_styles/disabled = SubResource("StyleBoxFlat_f515j")
text = "Set Origin"

[node name="AddBlock" type="Button" parent="Structs/Options"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_u8oni")
theme_override_styles/hover = SubResource("StyleBoxFlat_63evq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ymh38")
theme_override_styles/disabled = SubResource("StyleBoxFlat_6nxsn")
text = "Add Block
"

[node name="AddSub" type="Button" parent="Structs/Options"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_u8oni")
theme_override_styles/hover = SubResource("StyleBoxFlat_63evq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ymh38")
theme_override_styles/disabled = SubResource("StyleBoxFlat_6nxsn")
text = "Create Substitution
"

[node name="DeleteStruct" type="Button" parent="Structs/Options"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_r1cs8")
theme_override_styles/hover = SubResource("StyleBoxFlat_dqcod")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e1cs0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hlab7")
disabled = true
text = "Delete"

[node name="Loading" type="ColorRect" parent="."]
visible = false
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="Label" type="Label" parent="Loading"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -13.0
offset_right = 37.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Loading..."

[node name="SubstitutionSwapTimer" type="Timer" parent="."]

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
access = 2
filters = PackedStringArray("*.nbt")

[connection signal="item_activated" from="BlockList" to="BlockList" method="_on_item_activated"]
[connection signal="pressed" from="Panel/OptionBar/Structures" to="Panel/OptionBar" method="_on_structures_pressed"]
[connection signal="pressed" from="Panel/OptionBar/Save" to="Panel/OptionBar" method="_on_save_pressed"]
[connection signal="pressed" from="Panel/OptionBar/Load" to="Panel/OptionBar" method="_on_load_pressed"]
[connection signal="pressed" from="Panel/OptionBar/Place" to="Panel/OptionBar" method="_on_place_pressed"]
[connection signal="pressed" from="Panel/OptionBar/Clear" to="Panel/OptionBar" method="_on_clear_pressed"]
[connection signal="pressed" from="Panel/OptionBar/Refresh" to="Panel/OptionBar" method="_on_refresh_pressed"]
[connection signal="toggled" from="Panel/OptionBar/AutoAdd" to="Panel/OptionBar" method="_on_auto_add_toggled"]
[connection signal="toggled" from="Panel/OptionBar/ShowSubstitutions" to="Panel/OptionBar" method="_on_show_substitutions_toggled"]
[connection signal="toggled" from="Panel/OptionBar/IgnoreRotation" to="Panel/OptionBar" method="_on_ignore_rotation_toggled"]
[connection signal="item_selected" from="Structs/StructureTree" to="Structs/StructureTree" method="_on_item_selected"]
[connection signal="pressed" from="Structs/Options/NewStruct/AddStruct" to="Structs/StructureTree" method="_on_add_struct_pressed"]
[connection signal="pressed" from="Structs/Options/SetOrigin" to="Structs/StructureTree" method="_on_set_origin_pressed"]
[connection signal="pressed" from="Structs/Options/AddBlock" to="Structs/StructureTree" method="_on_add_block_pressed"]
[connection signal="pressed" from="Structs/Options/AddSub" to="Structs/StructureTree" method="_on_add_sub_pressed"]
[connection signal="pressed" from="Structs/Options/DeleteStruct" to="Structs/StructureTree" method="_on_delete_struct_pressed"]
[connection signal="timeout" from="SubstitutionSwapTimer" to="." method="_on_substitution_swap_timer_timeout"]
[connection signal="file_selected" from="FileDialog" to="Panel/OptionBar" method="_on_file_dialog_file_selected"]
